        Reviewed by Eric.

https://bugs.webkit.org/show_bug.cgi?id=11939
        Quirksmode: Ignores media types in stylesheet PIs

        Transfer the xml-stylesheet pseudo attribute media to the css
        stylesheet created from the ProcessingInstruction.

        Tests: fast/css/xml-stylesheet-media-processing.xhtml



Canonical link: https://commits.webkit.org/25986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32719 268f45cc-cd09-0410-ab3c-d52691b4dbfc