WebCore/dom/ProcessingInstruction.cpp
@@ -31,6 +31,7 @@
 #include "FrameLoader.h"
 #include "XSLStyleSheet.h"
 #include "XMLTokenizer.h" // for parseAttributes()
+#include "MediaList.h"
 
 namespace WebCore {
 
@@ -139,6 +140,7 @@ bool ProcessingInstruction::checkStyleSheet()
         String alternate = attrs.get("alternate");
         m_alternate = alternate == "yes";
         m_title = attrs.get("title");
+        m_media = attrs.get("media");
 
         if (href.length() > 1) {
             if (href[0] == '#') {
@@ -212,6 +214,7 @@ void ProcessingInstruction::setCSSStyleSheet(const String& url, const String& ch
     m_sheet = new CSSStyleSheet(this, url, charset);
     parseStyleSheet(sheet->sheetText());
     m_sheet->setTitle(m_title);
+    m_sheet->setMedia(new MediaList((CSSStyleSheet*)m_sheet.get(), m_media, false));
     m_sheet->setDisabled(m_alternate);
 }
 
