WebCore/dom/ProcessingInstruction.h
@@ -79,6 +79,7 @@ private:
     String m_data;
     String m_localHref;
     String m_title;
+    String m_media;
     CachedResource* m_cachedSheet;
     RefPtr<StyleSheet> m_sheet;
     bool m_loading;
